# vapaus-backend-project

./: Dockerfile  README.md  assignment.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: bike.py  finalize.py  init.py  organization.py
app/core/: _exception.py  config.py  vapaus_exception.py
app/crud/: bikes.py  organizations.py
app/db/: base.py  base_model.py  database.py
app/models/: __init__.py  bike.py  organisation.py  organization.py
data/: bikes.json  organizations.json
