[tool.poetry]
name = "backend_assignment"
version = "1.0.0"
description = "Vapaus backend assigment project"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
SQLAlchemy = "^1.4.37"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
